--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -7,7 +7,7 @@
       name: nginx
       state:  present
   - name: start nginx
-    ansible.builin.service: 
+    ansible.builtin.service: 
       name: nginx
       state:  started
 
