--- a/06-varwithfiles.yaml
+++ b/06-varwithfiles.yaml
@@ -4,8 +4,15 @@
   vars_files:  
     - vars.yaml
   tasks:
-    - name:  Print the variables from the file
+    - name:  Print the variables from the gloal file
       ansible.builtin.debug:  
         msg: " Course is {{ COURSE }} Duration is {{ DURATION }} Trainer is {{ TRAINER }}"
+
+    - name: Print the variables from local
+      vars: 
+        COURSE:"ANSIBLE"
+      ansible.builtin.debug:
+        msg: " Course is {{ COURSE }} Duration is {{ DURATION }} Trainer is {{ TRAINER }}"
+ 
       
     
