--- a/08-varfrominventory.yaml
+++ b/08-varfrominventory.yaml
@@ -4,4 +4,4 @@
   tasks:
     - name: Print the variable values
       ansible.builtin.debug:
-        msg: "Course name is {{ course} Duration is {{ duration }} Trainer is {{ trainer }}"
+        msg: "Course name is {{ course}} Duration is {{ duration }} Trainer is {{ trainer }}"
