--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [web]
 3.94.54.253 course="DevOps with AWS" duration="120hours" trainer="Venkata" ansible_user=ec2-user ansible_password=DevOps321
-localhost course="DevOps with AWS" duration="120hours" trainer="Venkata" 
+localhost course="DevOps with AWS" duration="120hours" trainer="Venkata" ansible_user=ec2-user ansible_password=DevOps321
 
 [local]
 localhost
