--- a/inventory.ini
+++ b/inventory.ini
@@ -5,7 +5,7 @@ localhost course="DevOps with AWS" duration="120hours" trainer="Venkata" ansible
 [local]
 localhost
 
-[local:vars]
-course="DevOps with AWS"
-duration="120 hours"
-trainer="venkata"
+; [local:vars]
+; course="DevOps with AWS"
+; duration="120 hours"
+; trainer="venkata"  
