--- a/11-datatypes.yaml
+++ b/11-datatypes.yaml
@@ -17,6 +17,6 @@
     tasks:
     - name: Print the course name
       ansible.builtin.debug:
-        msg: "Course {{ course } Duration {{ duration }} Topics {{ topics }} Live {{ live }} Tools {{ tools}}"
+        msg: "Course {{ course }} Duration {{ duration }} Topics {{ topics }} Live {{ live }} Tools {{ tools }}"
 
 
