--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -8,7 +8,8 @@
       ansible.builtin.debug:
         msg: "The given number {{ my_number}} is less than or equal to 15"
       when: my_number <= 15  
+
     - name: Print if the value is greater than 15
       ansible.builtin.debug:
-        msg: "The given number {{ my_number}} is less than or equal to 15"
+        msg: "The given number {{ my_number}} is greater than 15"
       when: my_number > 15 
